# video-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
assets/: MacOSXBundleInfo.plist.in
lib/FFmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp  video_reader.cpp  video_reader.hpp
